fixed wrong font, removed redundant one and removed strong tag

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,11 +1,5 @@
 @font-face
 {
-	font-family: "OpenSans";
-	src: url("fonts/OpenSans-Regular.ttf");
-}
-
-@font-face
-{
-	font-family: "Inconsolata";
-	src: url("fonts/Inconsolata-Regular.ttf");
+	font-family: "Inter";
+	src: url("fonts/Inter.ttf");
 }
